<resources>
    <string name="app_name">Stahoo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="nickname">Nickname</string>
    <string name="operations">Operations</string>
    <string name="statistics">Statistics</string>
    <string name="friends">Friends</string>
    <string name="select_month">Select month</string>
    <string name="select_year">Select year</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    <string name="operation_actions">Operation actions</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="invite_friend">Invite friend</string>
    <string name="remove_friend">Remove friend?</string>
    <string name="amount">Amount</string>
    <string name="add_split">Add split</string>

    <string-array name="months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="operation_cyclic">
        <item>Single</item>
        <item>Everyday</item>
        <item>Every week</item>
        <item>Every month</item>
    </string-array>

    <string-array name="categories">
        <item>Food</item>
        <item>Cosmetics</item>
        <item>Bills</item>
        <item>Hobby</item>
    </string-array>
</resources>
